2003-01-09  Bruno Haible  <bruno@clisp.org>

	* modules/stdbool: Change configure.ac, Makefile.am requirements.
	Simplify Include requirements. Add lib/stdbool.h.in to file list.

2003-01-09  Bruno Haible  <bruno@clisp.org>

	* gnulib-tool (func_all_modules): Ignore files ending in ~.
	* MODULES.html.sh: Likewise.

2003-01-09    <karl@gnu.org>

	* MODULES.html.sh: include `dirname $0` in PATH, to find
	gnulib-tool.

2003-01-08  Bruno Haible  <bruno@clisp.org>

	* modules/full-read: Depend on full-write.

2003-01-07  Bruno Haible  <bruno@clisp.org>

	* MODULES.html.sh: Add copyright notice.
	(missed_files): Omit CVS directory entries.
	(func_module): Make it work with sed-3.02.
	* MODULES.txt: Remove file.

2003-01-01    <karl@gnu.org>

	* gnulib-tool (func_verify_module): report module name $module in
	error message, not $1.
	* gnulib-tool (create-testdir): don't complain if destdir couldn't
	be created, only if it doesn't exist.
	* gnulib-tool (last_checkin_date): don't expand the $Date here.

2002-12-24  Bruno Haible  <bruno@clisp.org>

	* MODULES.txt: Update according to m4/ changes.

	Module gettext.
	* config.rpath: New file, from gettext-0.11.5.

	* modules/*: New module descriptions.
	* gnulib-tool: New file.
	* MODULES.html.sh: New file.

2002-11-01  Bruno Haible  <bruno@clisp.org>

	* configure.in: Add AC_CONFIG_AUX_DIR call.
	(AC_OUTPUT): Add m4/Makefile, lib/Makefile. Remove doc/Makefile,
	test/Makefile.
	* Makefile.in (subdirs): Add m4, lib. Remove doc, test.

2002-08-23  Stefan Monnier  <monnier@cs.yale.edu>

	* regex.c (PATFETCH): Remove the translating fetch.
	(PATFETCH_RAW): Rename to PATFETCH.
	(set_image_of_range): New fun.
	(SET_RANGE_TABLE_WORK_AREA): Use it.
	(regex_compile): Don't translate the pattern chars so eagerly.
	Only do it when inserting an `exactn' bytecode or when handling
	a char-range.
	(mutually_exclusive_p): Avoid empty statement.

2001-10-22  Jeff Bailey  <jbailey@outpost.dnsalias.org>

	* README: New file