@@ -1,3 +1,8 @@
+2003-01-10  Bruno Haible  <bruno@clisp.org>
+
+	* modules/alloca: Change Makefile.am requirements. Simplify Include
+	requirements. Add lib/alloca_.h to file list.
+
 2003-01-09  Bruno Haible  <bruno@clisp.org>
 
 	* modules/stdbool: Change configure.ac, Makefile.am requirements.
